Fixed header and footer spacing

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p { line-height: 1.5; color: #555; }
   width: 100%;
   background: #ffffff;
   border-bottom: 1px solid var(--border-light);
-  padding: 0 24px;
+  padding: 10px 24px;
   display: flex;
   lex-wrap: nowrap;
   flex-direction: row;
@@ -265,7 +265,6 @@ object.logo-icon-footer {
   border-top: 2px solid #007c7c;
   padding: 5px;
   width: 100%;
-  height: 50px;
 }
 
 
